[package]
name = "can2040"
version = "0.1.1"
edition = "2021"
authors = ["Zephyr Guo <zephyr@atomi.ai>"]
license = "GPL-3.0"
description = "A Can2040 port for Rust."
repository = "https://github.com/atomi-ai/can2040-rust"
categories = ["can"]
keywords = ["can", "canopen"]

[dependencies]
libc = "0.2"
nb = "1.1"
embedded-can = "0.4"
cortex-m = "0.7"

rp-pico = "0.8"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp2040-hal = { version = "0.9", features = ["rt", "critical-section-impl"] }

defmt = "0.3"
defmt-rtt = "0.4"

[build-dependencies]
bindgen = "0.68"
